# yandex_ml

./: .gitignore  README.md  pyproject.toml
notebooks/: autohw_intro_ML_92e1d33a4d.ipynb
src/models/: city_mean_regressor.py  mean_frequent_classifier.py  mean_regressor.py  rubric_city_median_classifier.py
