[tool.poetry]
name = "yandex-ml"
version = "0.1.0"
description = "https://education.yandex.ru/handbook/ml"
authors = ["Dmitriy Cherezov <cherezov89@gmail.com>"]
readme = "README.md"
packages = [{include = "./src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.5"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
